<resources>
    <string name="app_name">MyThreeActivities</string>
    <string name="first_page_h">
        بِسْمِ اللَّهِ الرَّحْمَنِ الرَّحِيم
    </string>
    <string name="first_page_t">
قُلْ هُوَ اللَّهُ أَحَدٌ (1) اللَّهُ الصَّمَدُ (2) لَمْ يَلِدْ وَلَمْ يُولَدْ (3) وَلَمْ يَكُنْ لَهُ كُفُوًا أَحَدٌ (4)
    </string>
    <string name="second_page_h">
        بِسْمِ اللَّهِ الرَّحْمَنِ الرَّحِيم
    </string>
    <string name="second_page_t">
قُلْ أَعُوذُ بِرَبِّ الْفَلَقِ (1) مِنْ شَرِّ مَا خَلَقَ (2) وَمِنْ شَرِّ غَاسِقٍ إِذَا وَقَبَ (3) وَمِنْ شَرِّ النَّفَّاثَاتِ فِي الْعُقَدِ (4) وَمِنْ شَرِّ حَاسِدٍ إِذَا حَسَدَ (5)    </string>
    <string name="third_page_h">
        بِسْمِ اللَّهِ الرَّحْمَنِ الرَّحِيم
    </string>
    <string name="third_page_t">
قُلْ أَعُوذُ بِرَبِّ النَّاسِ (1) مَلِكِ النَّاسِ (2) إِلَهِ النَّاسِ (3) مِنْ شَرِّ الْوَسْوَاسِ الْخَنَّاسِ (4) الَّذِي يُوَسْوِسُ فِي صُدُورِ النَّاسِ (5) مِنَ الْجِنَّةِ وَالنَّاسِ (6)
    </string>
    <string name="page1">الصفحة الأولى</string>
    <string name="page2">الصفحة الثانية</string>
    <string name="page3">الصفحة الثالثة</string>
    <string name="page_no_one">Page (1)</string>
    <string name="page_no_two">Page (2)</string>
    <string name="page_no_three">Page (3)</string>

</resources>