<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/text_of_page2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_page_t"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Header_of_page2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_page_h"
        android:textSize="@dimen/header_size"
        app:layout_constraintBottom_toTopOf="@+id/text_of_page2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/page_no_two"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="408dp"
        android:layout_height="59dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_of_page2"
        app:layout_constraintVertical_bias="0.74">

        <Button
            android:id="@+id/button_two_to_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:text="@string/page1"
            android:textSize="@dimen/Button_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="5dp" />

        <Button
            android:id="@+id/button_two_to_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page3"
            android:textSize="@dimen/Button_text_size"
            app:layout_constraintEnd_toStartOf="@+id/button_two_to_one"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>